# Space22

./: .gitignore  CMakeLists.txt  Readme.md
include/: background.h  defs.h  draw.h  highscores.h  init.h  input.h  main.h  sound.h  stage.h  structs.h  text.h  title.h  util.h
src/: background.c  draw.c  highscores.c  init.c  input.c  main.c  sound.c  stage.c  text.c  title.c  util.c
web/: SimpleGame.html
